<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Firebase Login Demo</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="facebookId">844442242264211</string>
    <string name="create_account">Create Account</string>
    <string name="emailText">email</string>
    <string name="passwordText">password</string>
    <string name="title_activity_games">GamesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="games">games</string>

</resources>
