<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.firebase.samples.logindemo.chalkitup.activities.MainActivity">


    <com.facebook.widget.LoginButton
        android:id="@+id/login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_with_facebook"
        android:visibility="invisible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:text="@string/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login_with_twitter"
        android:text="@string/login_with_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login_with_password"
        android:text="@string/login_with_password"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_anonymously"
        android:text="@string/login_anonymously"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/games_button"
        android:text="@string/games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNavigateToGames"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="email"
        android:layout_above="@+id/passwordText"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:layout_above="@+id/create_new_account"/>

    <Button
        android:id="@+id/create_new_account"
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createNewAccount"
        android:layout_alignParentBottom="true" />
    <TextView
        android:id="@+id/login_status"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
